--- a/src/app.scss
+++ b/src/app.scss
@@ -18,8 +18,8 @@ body {
   margin: auto;
 }
 section {
-  scroll-snap-align: center;
-  // height: 80vh;
+//   scroll-snap-align: center;
+  height: 100vh;
 }
 a {
   text-decoration: none;
@@ -63,43 +63,3 @@ ul {
   }
 }
 // sidebar
-.sidebar {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: whitesmoke;
-  color: black;
-}
-.bg {
-  position: fixed;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  width: 350px;
-  background: white;
-  .links{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-    a{
-      font-size: 26px;
-    }
-  }
-}
-.buttons {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  position: fixed;
-  top: 28px;
-  left: 25px;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-}
