--- a/src/projects/project.scss
+++ b/src/projects/project.scss
@@ -8,10 +8,65 @@
     font-size: 34px;
     padding-top: 50px;
     color: orange;
+    z-index: 1;
 
     .progressBar {
       height: 10px;
       background-color: white;
+    }
+  }
+
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+
+    .wrapper {
+      max-width: 1200px;
+      margin: auto;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 50px;
+
+      .imgContainer {
+        flex: 1;
+        height: 50%;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+
+      .textContainer {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        h2{
+          font-size: 64px;
+        }
+        p{
+          color: gray;
+          font-size: 20px;
+        }
+        a{
+          background-color: orange;
+          border: none;
+          border-radius: 10px;
+          padding: 10px;
+          width: 200px;
+          cursor: pointer;
+          text-align: center;
+          color: rgb(36, 35, 35);
+          font-weight: 600;
+        }
+      }
     }
   }
 }
