--- a/src/projects/project.scss
+++ b/src/projects/project.scss
@@ -36,6 +36,7 @@
       .imgContainer {
         flex: 1;
         height: 50%;
+        padding: 20px 0 0 30px;
         img {
           width: 100%;
           height: 100%;
