--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,63 +1,99 @@
-.contact{
-    max-width: 1200px;
-    margin: auto;
-    height: 100%;
+@import "../../app.scss";
+.contact {
+  max-width: 1200px;
+  margin: auto;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  gap: 50px;
+  @include mobile {
+    flex-direction: column;
+    width: 100%;
+    padding: 10px;
+    padding-top: 60px;
+  }
+
+  .textContainer {
+    flex: 1;
     display: flex;
-    align-items: center;
-    gap: 50px;
+    flex-direction: column;
+    gap: 40px;
+    @include mobile {
+      text-align: center;
+      align-items: center;
+      gap: 20px;
+      //   margin-top: 70px;
+    }
+    h1 {
+      font-size: 80px;
+      line-height: 78px;
+      @include mobile {
+        font-size: 36px;
+      }
+    }
+    span {
+      font-weight: 300;
+    }
+  }
 
-    .textContainer{
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        gap: 40px;
-        h1{
-            font-size: 80px;
-            line-height: 78px;
-        }
-        span{
-            font-weight: 300;
-        }
+  .formContainer {
+    flex: 1;
+    position: relative;
+    @include mobile {
+      width: 100%;
+      padding: 10px;
     }
 
-    .formContainer{
-        flex: 1;
-        position: relative;
-
-        .phoneSvg{
-            stroke: orange;
-            position: absolute;
-            margin: auto;
-            z-index: -1;
-        }
-        form{
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-
-            input,textarea{
-                padding: 20px;
-                width: 100%;
-                background-color: transparent;
-                border: 1px solid white;
-                color: white;
-                border-radius: 5px;
+    .phoneSvg {
+      stroke: orange;
+      position: absolute;
+      margin: auto;
+      z-index: -1;
+      @include mobile{
+            width: 93%;
+            .path{
+                max-width: 100%;
+                object-fit: cover;
+                height: 300px;
             }
-            .error{
-                border-color: red;
-            }
-            .error_message{
-                color: red;
-            }
-            button{
-                padding: 20px;
-                border: none;
-                font-weight: 600;
-                font-size: 18px;
-                cursor: pointer;
-                background-color: orange;
-                border-radius: 5px;
-            }
-        }
+          }
+         
+          
     }
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      input,
+      textarea {
+        padding: 20px;
+        width: 100%;
+        background-color: transparent;
+        border: 1px solid white;
+        color: white;
+        border-radius: 5px;
+        @include mobile {
+          padding: 10px;
+        }
+      }
+      .error {
+        border-color: red;
+      }
+      .error_message {
+        color: red;
+      }
+      button {
+        padding: 20px;
+        border: none;
+        font-weight: 600;
+        font-size: 18px;
+        cursor: pointer;
+        background-color: orange;
+        border-radius: 5px;
+        @include mobile {
+          padding: 10px;
+        }
+      }
+    }
+  }
 }
