--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -1,3 +1,4 @@
+@import "../../app.scss";
 .hero {
   height: calc(100vh - 100px);
   background: linear-gradient(180deg, #0c0c1d, #111132);
@@ -14,6 +15,14 @@
       flex-direction: column;
       justify-content: center;
       gap: 40px;
+
+      @include mobile {
+        height: 50%;
+        width: 100%;
+        gap: 20px;
+        align-items: center;
+        text-align: center;
+      }
       img {
         width: 50px;
       }
@@ -24,6 +33,9 @@
       }
       h1 {
         font-size: 70px;
+        @include mobile {
+          font-size: 36px;
+        }
       }
       button {
         padding: 20px;
@@ -41,6 +53,19 @@
     position: absolute;
     top: 0;
     right: 0;
+
+    @include mobile {
+      height: 50%;
+      width: 100%;
+      top: unset;
+      bottom: 0;
+    }
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: none;
+    }
   }
   .slideText {
     position: absolute;
