--- a/src/components/parallax/parallax.scss
+++ b/src/components/parallax/parallax.scss
@@ -1,3 +1,4 @@
+@import "../../app.scss";
 .parallax {
   width: 100%;
   height: 100%;
@@ -11,6 +12,10 @@
     font-size: 100px;
     position: relative;
     z-index: 3;
+    @include mobile {
+      font-size: 72px;
+      text-align: center;
+    }
   }
 
   .mountains {
@@ -21,6 +26,10 @@
     height: 100%;
     position: absolute;
     z-index: 4;
+    @include mobile {
+      background-repeat: no-repeat;
+      background-size: contain;
+    }
   }
   .planets {
     background-size: cover;
@@ -29,6 +38,10 @@
     height: 100%;
     position: absolute;
     z-index: 2;
+    @include mobile {
+      background-repeat: no-repeat;
+      background-size: contain;
+    }
   }
   .stars {
     background-image: url(/stars.png);
