--- a/src/projects/project.scss
+++ b/src/projects/project.scss
@@ -1,3 +1,4 @@
+@import "../app.scss";
 .project {
   position: relative;
   .progress {
@@ -9,6 +10,12 @@
     padding-top: 50px;
     color: orange;
     z-index: 1;
+
+    @include mobile{
+      // padding-top: calc(100vh - 100px);
+      top: 16px;
+      font-size: 24px;
+    }
 
     .progressBar {
       height: 10px;
@@ -33,14 +40,27 @@
       justify-content: center;
       gap: 50px;
 
+      @include mobile{
+        flex-direction: column;
+        gap: 10px;
+      }
+
       .imgContainer {
         flex: 1;
         height: 50%;
         padding: 20px 0 0 30px;
+        @include mobile{
+        width: 100%;
+        padding: 5px;
+        height: 300px;
+      }
         img {
           width: 100%;
           height: 100%;
           object-fit: cover;
+          @include mobile{
+        object-fit: contain;
+      }
         }
       }
 
@@ -49,12 +69,24 @@
         display: flex;
         flex-direction: column;
         gap: 30px;
+        @include mobile{
+          transform: none !important;
+          padding: 10px;
+          align-items: center;
+          text-align: center;
+        }
         h2{
           font-size: 64px;
+          @include mobile{
+            font-size: 36px;
+          }
         }
         p{
           color: gray;
           font-size: 20px;
+          @include mobile{
+            font-size: 16px;
+          }
         }
         a{
           background-color: orange;
