--- a/src/app.scss
+++ b/src/app.scss
@@ -53,10 +53,17 @@ ul {
       justify-content: flex-end;
       padding: 20px;
     }
+    @media (max-width: 1024px) and (min-width: 739px) {
+      justify-content: flex-end;
+      padding: 30px;
+    }
     span {
       font-weight: bold;
 
       @media (max-width: 738px) {
+        display: none;
+      }
+      @media (max-width: 1024px) and (min-width: 739px) {
         display: none;
       }
     }
@@ -70,6 +77,15 @@ ul {
     }
   }
 }
+.serviceCont {
+  height: auto;
+}
+.parallaxCont {
+  height: 150vh;
+  @media (max-width: 1024px) {
+    height: 100vh;
+  }
+}
 
 @mixin mobile {
   @media (max-width: 738px) {
@@ -78,7 +94,7 @@ ul {
 }
 
 @mixin tablet {
-  @media (max-width: 1024px) {
+  @media (max-width: 1024px) and (min-width: 739px) {
     @content;
   }
 }
