--- a/src/components/parallax/parallax.scss
+++ b/src/components/parallax/parallax.scss
@@ -1,4 +1,6 @@
 @import "../../app.scss";
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap');
+
 .parallax {
   width: 100%;
   height: 100%;
@@ -15,6 +17,13 @@
     @include mobile {
       font-size: 72px;
       text-align: center;
+    }
+    .ISpan{
+      margin: 0 15px;
+      font-family: 'Libre Baskerville', serif;
+    }
+    @include tablet{
+      font-size: 85px;
     }
   }
 
