--- a/src/components/serviceC/service.scss
+++ b/src/components/serviceC/service.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100&display=swap");
+@import "../../app.scss";
 .service {
   background: linear-gradient(180deg, #0c0c1d, #111132);
   height: 100%;
@@ -12,6 +13,16 @@
     display: flex;
     align-items: center;
     gap: 20px;
+    padding-top: 50px;
+
+    @include mobile {
+      align-self: center;
+      text-align: center;
+      flex-direction: column;
+    }
+
+    
+
     p {
       font-size: 18px;
       color: gray;
@@ -21,6 +32,10 @@
       width: 450px;
       border: none;
       border-top: 0.5px solid gray;
+      @include mobile {
+        width: 300px;
+      }
+      
     }
   }
   .titleContainer {
@@ -28,10 +43,28 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    padding-top: 50px;
+    @include mobile {
+      width: 100%;
+    }
+    @include tablet{
+        width: 100%;
+      }
     .title {
       display: flex;
       align-items: center;
       gap: 50px;
+      padding-bottom: 30px;
+      @include mobile {
+        gap: 20px;
+        flex-direction: column;
+        text-align: center;
+      }
+      @include tablet{
+        gap: 20px;
+        flex-direction: column;
+        text-align: center;
+      }
       b:hover {
         color: orange;
       }
@@ -40,11 +73,18 @@
         height: 100px;
         object-fit: cover;
         border-radius: 50px;
+        @include mobile {
+          width: 200px;
+          height: 50px;
+        }
       }
       h1 {
         font-size: 70px;
         font-family: "DM Sans", sans-serif;
         font-weight: 100;
+        @include mobile {
+          font-size: 36px;
+        }
       }
       button {
         width: 300px;
@@ -53,22 +93,51 @@
         background-color: orange;
         border: none;
         font-size: 24px;
+        @include mobile {
+          font-size: 16px;
+          width: 150px;
+          height: 50px;
+        }
       }
     }
   }
+
+  .skills {
+    margin: auto;
+    @include tablet {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
+
   .listContainer {
     flex: 2;
     max-width: 1200px;
     margin: auto;
     display: flex;
+    padding-top: 20px;
+    @include mobile {
+      width: 100%;
+      flex-direction: column;
+    }
+
+    @include tablet {
+      flex-direction: column;
+    }
 
     .box {
       padding: 50px;
-      border: 0.5px solid gray;
+      // border: 0.5px solid gray;
       display: flex;
+      text-align: center;
       flex-direction: column;
       gap: 20px;
       transition: 0.3s;
+
+      @include mobile {
+        border: none;
+      }
+
       button {
         padding: 10px;
         border: none;
