--- a/src/projects/project.scss
+++ b/src/projects/project.scss
@@ -16,6 +16,11 @@
       top: 16px;
       font-size: 24px;
     }
+    @include tablet{
+      top: 0px;
+      font-size: 28px;
+
+    }
 
     .progressBar {
       height: 10px;
@@ -44,6 +49,9 @@
         flex-direction: column;
         gap: 10px;
       }
+      @include tablet{
+        gap: 30px;
+      }
 
       .imgContainer {
         flex: 1;
@@ -54,6 +62,7 @@
         padding: 5px;
         height: 300px;
       }
+      
         img {
           width: 100%;
           height: 100%;
@@ -61,6 +70,10 @@
           @include mobile{
         object-fit: contain;
       }
+      @include tablet{
+        object-fit: contain;
+      }
+
         }
       }
 
@@ -75,11 +88,17 @@
           align-items: center;
           text-align: center;
         }
+        @include tablet{
+        gap: 20px;
+      }
         h2{
           font-size: 64px;
           @include mobile{
             font-size: 36px;
           }
+          @include tablet{
+        font-size: 48px;
+      }
         }
         p{
           color: gray;
@@ -98,6 +117,9 @@
           text-align: center;
           color: rgb(36, 35, 35);
           font-weight: 600;
+          @include tablet{
+        width: 150px;
+      }
         }
       }
     }
