--- a/src/projects/project.scss
+++ b/src/projects/project.scss
@@ -11,15 +11,14 @@
     color: orange;
     z-index: 1;
 
-    @include mobile{
+    @include mobile {
       // padding-top: calc(100vh - 100px);
       top: 16px;
       font-size: 24px;
     }
-    @include tablet{
+    @include tablet {
       top: 0px;
       font-size: 28px;
-
     }
 
     .progressBar {
@@ -45,11 +44,11 @@
       justify-content: center;
       gap: 50px;
 
-      @include mobile{
+      @include mobile {
         flex-direction: column;
         gap: 10px;
       }
-      @include tablet{
+      @include tablet {
         gap: 30px;
       }
 
@@ -57,23 +56,24 @@
         flex: 1;
         height: 50%;
         padding: 20px 0 0 30px;
-        @include mobile{
-        width: 100%;
-        padding: 5px;
-        height: 300px;
-      }
-      
+    
+        @include mobile {
+          width: 100%;
+          padding: 5px;
+          height: 300px;
+        }
+
         img {
           width: 100%;
           height: 100%;
           object-fit: cover;
-          @include mobile{
-        object-fit: contain;
-      }
-      @include tablet{
-        object-fit: contain;
-      }
-
+          border-radius: 5px;
+          @include mobile {
+            object-fit: contain;
+          }
+          @include tablet {
+            object-fit: contain;
+          }
         }
       }
 
@@ -82,32 +82,32 @@
         display: flex;
         flex-direction: column;
         gap: 30px;
-        @include mobile{
+        @include mobile {
           transform: none !important;
           padding: 10px;
           align-items: center;
           text-align: center;
         }
-        @include tablet{
-        gap: 20px;
-      }
-        h2{
+        @include tablet {
+          gap: 20px;
+        }
+        h2 {
           font-size: 64px;
-          @include mobile{
+          @include mobile {
             font-size: 36px;
           }
-          @include tablet{
-        font-size: 48px;
-      }
+          @include tablet {
+            font-size: 48px;
+          }
         }
-        p{
+        p {
           color: gray;
           font-size: 20px;
-          @include mobile{
+          @include mobile {
             font-size: 16px;
           }
         }
-        a{
+        a {
           background-color: orange;
           border: none;
           border-radius: 10px;
@@ -117,9 +117,9 @@
           text-align: center;
           color: rgb(36, 35, 35);
           font-weight: 600;
-          @include tablet{
-        width: 150px;
-      }
+          @include tablet {
+            width: 150px;
+          }
         }
       }
     }
