--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -44,7 +44,7 @@
           font-size: 36px;
         }
       }
-      button,a {
+      a {
         padding: 20px;
         border: 1px solid white;
         border-radius: 10px;
