--- a/src/components/serviceC/service.scss
+++ b/src/components/serviceC/service.scss
@@ -21,8 +21,6 @@
       flex-direction: column;
     }
 
-    
-
     p {
       font-size: 18px;
       color: gray;
@@ -35,7 +33,6 @@
       @include mobile {
         width: 300px;
       }
-      
     }
   }
   .titleContainer {
@@ -47,9 +44,9 @@
     @include mobile {
       width: 100%;
     }
-    @include tablet{
-        width: 100%;
-      }
+    @include tablet {
+      width: 100%;
+    }
     .title {
       display: flex;
       align-items: center;
@@ -60,7 +57,7 @@
         flex-direction: column;
         text-align: center;
       }
-      @include tablet{
+      @include tablet {
         gap: 20px;
         flex-direction: column;
         text-align: center;
@@ -104,6 +101,13 @@
 
   .skills {
     margin: auto;
+    @include mobile {
+      padding-bottom: 50px;
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+      padding-top: 30px;
+    }
     @include tablet {
       display: flex;
       justify-content: space-between;
@@ -118,7 +122,8 @@
     padding-top: 20px;
     @include mobile {
       width: 100%;
-      flex-direction: column;
+      gap: 18px;
+      padding-top: 0;
     }
 
     @include tablet {
@@ -136,6 +141,26 @@
 
       @include mobile {
         border: none;
+        padding: 10px;
+      }
+
+      h2 {
+        @include mobile {
+          display: none;
+        }
+      }
+
+      .svgContainer {
+        @include mobile {
+          max-width: 50px;
+          height: 50px;
+        }
+        svg {
+          @include mobile {
+            max-width: 100%;
+            height: 100%;
+          }
+        }
       }
 
       button {
