--- a/src/components/serviceC/service.scss
+++ b/src/components/serviceC/service.scss
@@ -56,6 +56,7 @@
         gap: 20px;
         flex-direction: column;
         text-align: center;
+        padding-bottom: 11px;
       }
       @include tablet {
         gap: 20px;
