--- a/src/projects/project.scss
+++ b/src/projects/project.scss
@@ -26,7 +26,19 @@
       background-color: white;
     }
   }
-
+  .prdSecContainer{
+    @include mobile{
+      display: flex;
+      flex-direction: column;
+      gap: 100px;
+    }
+  }
+.sectionProjects{
+  @include mobile{
+      height: auto;
+      padding: 20px 0;
+    }
+}
   .container {
     display: flex;
     align-items: center;
@@ -34,6 +46,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+    
 
     .wrapper {
       max-width: 1200px;
